Orders-service/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order-service
  template:
    metadata:
      labels:
        app: order-service
    spec:
      imagePullSecrets:
        - name: authcred
      containers:
        - name: order-service
          image: didin8080/orders:1
          ports:
            - containerPort: 8004
          resources:
            limits:
              memory: "256Mi"
              cpu: "200m"
            requests:
              memory: "512Mi"
              cpu: "500m"
